# training_manager

./: .gitignore  .isaaclab_manager.db  Cargo.toml  README.md  isaaclab_manager.db-shm  isaaclab_manager.db-wal
.sqlx/: query-1af17f6d849ba9a62d9ed08e7da0a3802d72db8d4547d07d382728ce42e6801a.json  query-1c76248997c70c3d8e19e443bc41792ca0798692e4e34becbc97d2a5988bb2c3.json  query-46b22e6c99b199cb44959a2983aacbb9666ff6a16d710909767ac102e7535bad.json  query-ae2d0ec4068dc7595cbfdd0d78eda1805faddfee739b301dd703fcafce4777f7.json
config/: .app.toml  app.toml
jules-scratch/verification/: verify_download_button.py
migrations/: 001_initial.sql  002_add_working_dir_to_tasks.sql  003_add_pid_to_tasks.sql
src/: config.rs  error.rs  main.rs  metrics_parser.rs  models.rs  task_manager.rs
src/routes/: config.rs  config_routes.rs  files.rs  mod.rs  resources.rs  static_files.rs  sync.rs  sync_routes.rs  system_resources.rs  task_routes.rs  tasks.rs
static/: index.html
