[package]
name = "isaaclab-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "isaaclab-manager"
path = "src/main.rs"

[[bin]]
name = "sync-client"
path = "src/bin/sync_client.rs"

[dependencies]
# Web框架
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10.0" }
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# 进程管理
tokio-process = "0.2"
nix = { version = "0.30", features = ["process", "signal"] }

# Conda环境管理
which = "8.0"

# 其他工具
glob = "0.3.1"
sha2 = "0.10"
walkdir = "2"
regex = "1.10.2"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 异步处理
futures = "0.3"

# UUID生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 文件监控
notify = "8.2"

# HTTP客户端
reqwest = { version = "0.12", features = ["json", "multipart"] }

# 模板引擎
askama = "0.14"
askama_axum = "0.4"
sysinfo = "0.36.1"
toml = "0.9.5"
tokio-util = { version = "0.7.16", features = ["io"] }
clap = { version = "4.5.45", features = ["derive"] }
indicatif = "0.18.0"
zip = "4.3.0"
tempfile = "3.10.1"
home = "0.5.11"
